// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <RecordsOfTablePopoverEvents /> should renders with props correctly 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Name
        </label>
        <div
          className="form-control-static"
        >
          - Procedure
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Type
        </label>
        <div
          className="form-control-static"
        >
          Admission
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Notes
    </label>
    <div
      className="form-control-static"
    >
      - Procedure
    </div>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Location
        </label>
        <div
          className="form-control-static"
        >
          test
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`Component <RecordsOfTablePopoverEvents /> should renders with props correctly with empty detail 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Name
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Type
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Notes
    </label>
    <div
      className="form-control-static"
    />
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Location
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Event Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
</div>
`;
